force-app/main/default/objects/Automation_Setting__c/Automation_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom Setting delivered as part of the Hospitality Service Cloud rollout enabling to toggle Service Cloud automation on/off. These flags of this custom setting will be utilized in Salesforce automation to turn logic on/off either globally, for specific profiles, or specific users.</description>
    <label>Automation Setting</label>
</CustomObject>