force-app/main/default/objects/Automation_Setting__c/fields/Skip_Flow__c.field-meta.xml
<CustomField>
    <fullName>Skip_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if checked will not execute Flows</description>
    <label>Skip Flow</label>
    <type>Checkbox</type>
</CustomField>