force-app/main/default/objects/Automation_Setting__c/fields/Skip_Outbound_Integration__c.field-meta.xml
<CustomField>
    <fullName>Skip_Outbound_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if checked will not do outbound calls</description>
    <label>Skip Outbound Integration</label>
    <type>Checkbox</type>
</CustomField>