force-app/main/default/objects/Automation_Setting__c/fields/Skip_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Skip_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if checked will not execute any Triggers</description>
    <label>Skip Trigger</label>
    <type>Checkbox</type>
</CustomField>