force-app/main/default/objects/Automation_Setting__c/fields/Skip_Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Skip_Validation_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if checked will not execute Validation Rules</description>
    <label>Skip Validation Rule</label>
    <type>Checkbox</type>
</CustomField>