force-app/main/default/objects/Automation_Setting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>SETUP_TYPE</columns>
    <columns>Skip_Flow__c</columns>
    <columns>Skip_Outbound_Integration__c</columns>
    <columns>Skip_Trigger__c</columns>
    <columns>Skip_Validation_Rule__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>